<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/account"
        android:fontFamily="@font/aclonica">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/UserInfo"
                    android:fontFamily="@font/aclonica"
                    android:title="@string/user_information"
                    android:icon="@drawable/info_icon"/>
                <item
                    android:id="@+id/DeveloperId"
                    android:title="@string/developers"
                    android:fontFamily="@font/aclonica"
                    android:icon="@drawable/people_icon"/>
                <item
                    android:id="@+id/LogoutId"
                    android:title="@string/logout"
                    android:fontFamily="@font/aclonica"
                    android:icon="@drawable/logout_icon"/>
            </group>
        </menu>
    </item>

</menu>