<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backlog"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:includeFontPadding="false"
        android:shadowColor="#FFFFFF"
        android:text="@string/register"
        android:textColor="#FDFDFD"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fName"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"

            android:background="@drawable/boxdesign"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lName"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/boxdesign"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/boxdesign"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/emailRegister"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:background="@drawable/boxdesign"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boxdesign"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/passwordRegister"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:background="@drawable/boxdesign"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/CheckPass"
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/show_passwordRegister"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up"
        android:layout_width="203dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boxdesign"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:iconTint="#101C5E"
        app:rippleColor="#3F51B5" />

    <TextView
        android:id="@+id/existing_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:shadowColor="#000000"
        android:text="@string/back_to_login"
        android:textColor="#000000"
        android:textStyle="bold" />

</LinearLayout>